k8s/apps/akvorado/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: akvorado
    app.kubernetes.io/name: akvorado
  name: akvorado-console
  namespace: akvorado
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: console
      app.kubernetes.io/name: akvorado
  template:
    metadata:
      labels:
        app: akvorado
        app.kubernetes.io/component: console
        app.kubernetes.io/name: akvorado
    spec:
      containers:
        - args:
            - console
            - http://akvorado-orchestrator:8080
          image: quay.io/akvorado/akvorado:2.4.1@sha256:8acf8b7312ee3331bf4d348678949d4dcb134b533a1c882beb830b6d7d8a8428
          livenessProbe:
            httpGet:
              path: /api/v0/healthcheck
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          name: console
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v0/healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 2m
              memory: 15Mi
          volumeMounts: []
      volumes: []
