k8s/apps/akvorado/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: akvorado
    app.kubernetes.io/component: orchestrator
    app.kubernetes.io/name: akvorado
  name: akvorado-orchestrator
  namespace: akvorado
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: orchestrator
    app.kubernetes.io/name: akvorado
