k8s/apps/akvorado/network-policy-console-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: akvorado-console-egress
  namespace: akvorado
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 9000
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: akvorado
          podSelector:
            matchLabels:
              app.kubernetes.io/name: clickhouse-server
              clickhouse.com/cluster: akvorado-clickhouse
              clickhouse.com/role: clickhouse-server
    - ports:
        - port: 8080
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: akvorado
          podSelector:
            matchLabels:
              app.kubernetes.io/component: orchestrator
              app.kubernetes.io/name: akvorado
    - ports:
        - port: 6379
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: akvorado
          podSelector:
            matchLabels:
              valkey.io/cluster: akvorado-valkey
  podSelector:
    matchLabels:
      app.kubernetes.io/component: console
      app.kubernetes.io/name: akvorado
  policyTypes:
    - Egress
