k8s/apps/akvorado/network-policy-outlet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: akvorado-outlet-ingress
  namespace: akvorado
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app: akvorado
      app.kubernetes.io/component: outlet
      app.kubernetes.io/name: akvorado
  policyTypes:
    - Ingress
